--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hallo wereld.
+<!DOCTYPE html>
+<html lang="nl" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Jeffrey Lauwers</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <link rel="stylesheet" href="..." /> -->
+  </head>
+  <body>
+    Hallo wereld!
+  </body>
+</html>
