--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     Hallo wereld!
+    <img src="jeffreylauwers.png" alt="Jeffrey Lauwers als pixar karakter, groen t-shirt, bruin haar, grote blauwe ogen.">
   </body>
 </html>
