--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Jeffrey Lauwers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="stylesheet" href="..." /> -->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     Hallo wereld!
