docs: inhoud aangepast

--- a/index.html
+++ b/index.html
@@ -7,7 +7,57 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    Hallo wereld!
-    <img src="jeffreylauwers.png" alt="Jeffrey Lauwers als pixar karakter, groen t-shirt, bruin haar, grote blauwe ogen.">
+   <h1>
+     Jeffrey Lauwers. Digitale probleem oplosser.
+   </h1>
+    <p>
+      Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om mensen te helpen en op te ruimen. Dat doe ik digitaal ook als Senior Product Designer bij Valsplat.
+    </p>
+    <p>
+      Ik werk graag aan grote, complexe projecten en ben gespecialiseerd in design systemen en toegankelijkheid (CPACC).
+    </p>
+    <h2>
+      Werk
+    </h2>
+    <p>
+      In de afgelopen jaren heb ik gewerkt aan verschillende opdrachten.
+    </p>
+    <ul>
+      <li>
+        <h3>
+          NL Design System
+        </h3>
+        <p>
+          Het NL Design System maakt de digitale dienstverlening van de overheid toegankelijk, inclusief en gebruiksvriendelijk. Dit gebeurt vanuit een community van designers, developers, toegankelijkheids specialisten, copywriters, etc. ondersteund door een kernteam. Binnen dit kernteam vervul ik de design-rol.
+        </p>
+        <p>
+          In die hoedanigheid help ik bij het verzamelen, documenteren, doorontwikkelen en uitwisselen van richtlijnen, componenten, en (interactie)patronen. Ik voer de regie op de werking van de community vanuit het design perspectief om zo kennis en kunde te bundelen. Ik onboard en enthousiasmeer designers om via het NL Design System te werken. Vervolgens help ze met design system gerelateerde vraagstukken en jaag hergebruik en samenwerking aan.
+        </p>
+      </li>
+      <li>
+        <h3>
+          NS Design System (Nessie)
+        </h3>
+        <p>
+          Samen met mijn collega’s Milan en Niek ben ik ingestapt bij de Nederlandse Spoorwegen om een multi-platform en toegankelijk design systeem voor heel NS te realiseren. Ik was verantwoordelijk voor het inventariseren, scopen, ontwerpen en documenteren van web/app componenten in Figma. Ik stuurde het team van designers aan en schakelde direct met de web en native app developers. Ik hielp andere NS designers te werken met het design system.
+        </p>
+      </li>
+      <li>
+        <h3>
+          NN Design System
+        </h3>
+        <p>
+          Samen met mijn collega Niek zijn we aan boord gekomen een multi-platform en toegankelijk design systeem voor Nationale Nederlanden te realiseren. Ik was verantwoordelijk voor het inventariseren, scopen, ontwerpen en documenteren van app (en later ook web) componenten in Figma. Ik schakelde direct met de de brand manager en de app developer. Ik hielp andere designers bij Nationale Nederlanden te werken met het design system.
+        </p>
+      </li>
+            <li>
+        <h3>
+          Randstad Design System
+        </h3>
+        <p>
+          Bij Randstad werkte ik parallel aan twee projecten. Enerzijds was ik UX/UI Designer voor de HR Assistent, een B2E applicatie voor intercedenten. Waar ik als onderdeel van het agile scrum delivery team werkte aan het ophalen van gebruikersfeedback en ontwerpen van nieuwe functionaliteiten. Daarnaast was ik de designer voor Brandshift, het design system voor interne applicaties.
+        </p>
+      </li>
+    </ul>
   </body>
 </html>
