--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           NL Design System
         </h3>
         <p>
-          Het NL Design System maakt de digitale dienstverlening van de overheid toegankelijk, inclusief en gebruiksvriendelijk. Dit gebeurt vanuit een community van designers, developers, toegankelijkheids specialisten, copywriters, etc. ondersteund door een kernteam. Binnen dit kernteam vervul ik de design-rol.
+          NL Design System maakt de digitale dienstverlening van de overheid toegankelijk, inclusief en gebruiksvriendelijk. Dit gebeurt vanuit een community van designers, developers, toegankelijkheids specialisten, copywriters, etc. ondersteund door een kernteam. Binnen dit kernteam vervul ik de design-rol.
         </p>
         <p>
-          In die hoedanigheid help ik bij het verzamelen, documenteren, doorontwikkelen en uitwisselen van richtlijnen, componenten, en (interactie)patronen. Ik voer de regie op de werking van de community vanuit het design perspectief om zo kennis en kunde te bundelen. Ik onboard en enthousiasmeer designers om via het NL Design System te werken. Vervolgens help ze met design system gerelateerde vraagstukken en jaag hergebruik en samenwerking aan.
+          In die hoedanigheid help ik bij het verzamelen, documenteren, doorontwikkelen en uitwisselen van richtlijnen, componenten, en (interactie)patronen. Ik voer de regie op de werking van de community vanuit het design perspectief om zo kennis en kunde te bundelen. Ik onboard en enthousiasmeer designers om via NL Design System te werken. Vervolgens help ze met design system gerelateerde vraagstukken en jaag hergebruik en samenwerking aan.
         </p>
       </li>
       <li>
@@ -39,7 +39,7 @@
           NS Design System (Nessie)
         </h3>
         <p>
-          Samen met mijn collega’s Milan en Niek ben ik ingestapt bij de Nederlandse Spoorwegen om een multi-platform en toegankelijk design systeem voor heel NS te realiseren. Ik was verantwoordelijk voor het inventariseren, scopen, ontwerpen en documenteren van web/app componenten in Figma. Ik stuurde het team van designers aan en schakelde direct met de web en native app developers. Ik hielp andere NS designers te werken met het design system.
+          Bij de Nederlandse Spoorwegen ben ik ingestapt om een multi-platform en toegankelijk design systeem te realiseren. Ik was verantwoordelijk voor het inventariseren, scopen, ontwerpen en documenteren van web/app componenten. Ik stuurde het team van designers aan en schakelde direct met de web en native app developers. Daarnaast hielp ik NS designers te werken via het design system.
         </p>
       </li>
       <li>
@@ -47,7 +47,7 @@
           NN Design System
         </h3>
         <p>
-          Samen met mijn collega Niek zijn we aan boord gekomen een multi-platform en toegankelijk design systeem voor Nationale Nederlanden te realiseren. Ik was verantwoordelijk voor het inventariseren, scopen, ontwerpen en documenteren van app (en later ook web) componenten in Figma. Ik schakelde direct met de de brand manager en de app developer. Ik hielp andere designers bij Nationale Nederlanden te werken met het design system.
+          Bij Nationale Nederlanden ben ik aan boord gekomen om een multi-platform en toegankelijk design systeem te realiseren. Ik was verantwoordelijk voor het inventariseren, scopen, ontwerpen en documenteren van app (en later ook web) componenten. Ik schakelde direct met de de brand manager en de app developer. Daarnaast hielp ik andere designers bij Nationale Nederlanden te werken via het design system.
         </p>
       </li>
       <li>
