--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           NN Design System
         </h3>
         <p>
-          Bij Nationale Nederlanden ben ik aan boord gekomen om een multi-platform en toegankelijk design systeem te realiseren. Ik was verantwoordelijk voor het inventariseren, scopen, ontwerpen en documenteren van app (en later ook web) componenten. Ik schakelde direct met de de brand manager en de app developer. Daarnaast hielp ik andere designers bij Nationale Nederlanden te werken via het design system.
+          Bij Nationale Nederlanden was men verzekerd van mijn inzet om een multi-platform en toegankelijk design systeem te realiseren. Ik was verantwoordelijk voor het inventariseren, scopen, ontwerpen en documenteren van app (en later ook web) componenten. Ik schakelde direct met de de brand manager en de app developer. Daarnaast hielp ik andere designers bij Nationale Nederlanden te werken via het design system.
         </p>
       </li>
       <li>
