--- a/index.html
+++ b/index.html
@@ -59,5 +59,22 @@
         </p>
       </li>
     </ul>
+<h2>
+Quotes
+</h2>
+<p>
+Feedback op werkzaamheden van mensen met wie ik heb samengewerkt.
+</p>
+<figure>
+<blockquote>
+<p>
+Het was fijn om met Jeffrey samen te werken. Hij weet als geen ander alle voors en tegens van bepaalde oplossingen naar boven te halen. We hebben echt iets moois neergezet voor NS. Het is een complete designer die ook nog eens goed kan communiceren en snel contact legt.
+</p>
+</blockquote>
+
+<figcaption>
+Tibor den Held, Designer / Web developer bij NS
+</figcaption>
+</figure>
   </body>
 </html>
