--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 Quotes
 </h2>
 <p>
-Feedback op werkzaamheden van mensen met wie ik heb samengewerkt.
+Feedback op mijn werkzaamheden van mensen met wie ik heb samengewerkt.
 </p>
 <figure>
 <blockquote>
