--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ Quotes
 <p>
 Feedback op mijn werkzaamheden van mensen met wie ik heb samengewerkt.
 </p>
+
 <figure>
 <blockquote>
 <p>
@@ -73,8 +74,22 @@ Het was fijn om met Jeffrey samen te werken. Hij weet als geen ander alle voors 
 </blockquote>
 
 <figcaption>
-Tibor den Held, Designer / Web developer bij NS
+Tibor den Held, Designer / Web developer NS Design System
+</figcaption>
+</figure>
+
+<figure>
+<blockquote>
+<p>
+Werken met Jeffrey is inspirerend en plezierig. Hij combineert enthousiasme en een pragmatische aanpak met veel oog voor detail en proces. Jeffrey weet mensen mee te nemen, kritisch te challengen op een prettige manier en tegelijkertijd luchtigheid te brengen in het team. Dankzij zijn bijdrage staat er nu iets waar we trots op zijn en waar anderen graag mee werken.
+</p>
+</blockquote>
+
+<figcaption>
+Bas Zweeris, Product Owner NS Design System
 </figcaption>
 </figure>
   </body>
 </html>
+
+
