--- a/index.html
+++ b/index.html
@@ -84,11 +84,23 @@ Tibor den Held, Designer / Web developer NS Design System
 Werken met Jeffrey is inspirerend en plezierig. Hij combineert enthousiasme en een pragmatische aanpak met veel oog voor detail en proces. Jeffrey weet mensen mee te nemen, kritisch te challengen op een prettige manier en tegelijkertijd luchtigheid te brengen in het team. Dankzij zijn bijdrage staat er nu iets waar we trots op zijn en waar anderen graag mee werken.
 </p>
 </blockquote>
-
 <figcaption>
 Bas Zweeris, Product Owner NS Design System
 </figcaption>
 </figure>
+
+<figure>
+<blockquote>
+<p>
+Jeffrey was heel snel up-to-speed en bracht meteen veel kennis mee. Hij werkt netjes en gestructureerd, maar is tegelijk heel toegankelijk en gezellig om mee samen te werken. Je merkt dat hij zijn keuzes altijd goed kan onderbouwen, en dat wordt enorm gewaardeerd. Voor mij was het zowel inhoudelijk als persoonlijk een hele fijne samenwerking.
+</p>
+</blockquote>
+<figcaption>
+Michael Vermeulen, Designer NN Design System
+</figcaption>
+</figure>
+
+
   </body>
 </html>
 
