--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+<div class="disclaimer">
+<p>
+Disclaimer: Deze pagina is nog lang niet af. Ik werk er zo nu en dan aan. Dus mocht je hier terecht komen en denken "Huh! dat klopt niet!"... dat klopt.
+</p>
+</div>
     <h1>
       Jeffrey Lauwers. Digitale probleem oplosser.
     </h1>
@@ -66,6 +71,7 @@ Quotes
 Feedback op mijn werkzaamheden van mensen met wie ik heb samengewerkt.
 </p>
 
+
 <figure>
 <blockquote>
 <p>
@@ -99,6 +105,63 @@ Jeffrey was heel snel up-to-speed en bracht meteen veel kennis mee. Hij werkt ne
 Michael Vermeulen, Designer NN Design System
 </figcaption>
 </figure>
+
+<figure>
+<blockquote>
+<p>
+Jeffrey is een enthousiaste en supervriendelijke collega die altijd positiviteit brengt. Hij werkt methodisch en nauwgezet, ziet details die anderen missen en stelt de juiste vragen. Daarmee helpt hij niet alleen het eindproduct, maar ook de mensen om hem heen beter te worden. Een plezier om mee samen te werken.
+</p>
+</blockquote>
+<figcaption>
+Marjon Bakker, Senior adviseur digitale toegankelijkheid bij Firm Ground
+</figcaption>
+</figure>
+
+<figure>
+<blockquote>
+<p>
+Jeffrey heeft zich onmisbaar gemaakt voor het NL Design System. Hij haalt actief feedback op in de community, organiseert succesvolle samenwerkdagen voor designers en vertaalt onderzoek naar bruikbare patronen. Daarmee helpt hij niet alleen het systeem vooruit, maar ook de hele community die ermee werkt.
+</p>
+</blockquote>
+<figcaption>
+Hidde de Vries, Toegankelijkheidsspecialist bij NL Design System
+</figcaption>
+</figure>
+
+<figure>
+<blockquote>
+<p>
+Jeffrey is een van de fijnste collega’s om mee samen te werken. Hij combineert diepgaande kennis van design systems met een gestructureerde en duidelijke manier van werken. Dankzij zijn analytisch vermogen ziet hij snel verbanden en vertaalt onderzoek naar concrete verbeteringen. Daarbij communiceert hij helder, luistert goed en zorgt voor een positieve en prettige werksfeer.
+</p>
+</blockquote>
+<figcaption>
+Rozerin Ayerdem, Designer NL Design System 
+</figcaption>
+</figure>
+
+<figure>
+<blockquote>
+<p>
+Jeffrey heeft de designer community actief betrokken bij de ontwikkeling van het NL Design System. Hij brengt veel kennis mee, maar weet tegelijk anderen te faciliteren en vertrouwen te geven. Dat maakt samenwerken met hem niet alleen leuk, maar ook ontzettend waardevol voor het succes van het design system.
+</p>
+</blockquote>
+<figcaption>
+Yolijn van der Kolk, Productmanager NL Design System 
+</figcaption>
+</figure>
+
+<figure>
+<blockquote>
+<p>
+
+</p>
+</blockquote>
+<figcaption>
+
+</figcaption>
+</figure>
+
+
 
 
   </body>
