--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 <div class="disclaimer">
 <p>
-Disclaimer: Deze pagina is nog lang niet af. Ik werk er zo nu en dan aan. Dus mocht je hier terecht komen en denken "Huh! dat klopt niet!"... dat klopt.
+Disclaimer: Deze pagina is nog lang niet af. Ik werk soms aan. Dus mocht je hier terecht komen en denken "Huh! dat klopt niet!"... dat klopt.
 </p>
 </div>
     <h1>
