--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 <div class="disclaimer">
-<p>
+<p class="disclaimer-content">
 Disclaimer: Deze pagina is nog lang niet af. Ik werk soms aan. Dus mocht je hier terecht komen en denken "Huh! dat klopt niet!"... dat klopt.
 </p>
 </div>
