--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Hidde de Vries, Toegankelijkheidsspecialist bij NL Design System
 <figure>
 <blockquote>
 <p>
-Jeffrey is een van de fijnste collega’s om mee samen te werken. Hij combineert diepgaande kennis van design systems met een gestructureerde en duidelijke manier van werken. Dankzij zijn analytisch vermogen ziet hij snel verbanden en vertaalt onderzoek naar concrete verbeteringen. Daarbij communiceert hij helder, luistert goed en zorgt voor een positieve en prettige werksfeer.
+Jeff is een van de fijnste collega’s om mee samen te werken. Hij combineert diepgaande kennis van design systems met een gestructureerde en duidelijke manier van werken. Dankzij zijn analytisch vermogen ziet hij snel verbanden en vertaalt onderzoek naar concrete verbeteringen. Daarbij communiceert hij helder, luistert goed en zorgt voor een positieve en prettige werksfeer.
 </p>
 </blockquote>
 <figcaption>
