--- a/index.html
+++ b/index.html
@@ -6,165 +6,277 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
-<div class="disclaimer">
-<p class="disclaimer-content">
-Disclaimer: Deze pagina is nog lang niet af. Ik werk er soms aan. Dus mocht je hier terecht komen en denken "Huh! dat klopt niet!"... dat klopt.
-</p>
-</div>
-    <h1>
-      Jeffrey Lauwers. Digitale probleem oplosser.
-    </h1>
-   <p>
-      Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om mensen te helpen en op te ruimen. Dat doe ik digitaal ook als Senior Product Designer bij Valsplat.
-    </p>
-    <p>
-      Ik werk graag aan grote, complexe projecten en ben gespecialiseerd in design systemen en toegankelijkheid (CPACC).
-    </p>
-    <h2>
-      Werk
-    </h2>
-    <p>
-      In de afgelopen jaren heb ik gewerkt aan verschillende opdrachten.
-    </p>
-    <ul>
-      <li>
-        <h3>
-          NL Design System
-        </h3>
+    <header>
+      <h1>
+        Jeffrey Lauwers
+      </h1>  
+      <nav>
+        <ul>
+          <li>
+            <a href="#work">
+              Werk
+            </a>
+          </li>
+          <li>
+            <a href="#quotes">
+              Quotes
+            </a>
+          </li>
+          <li>
+            <a href="#about">
+              Over mij
+            </a>
+          </li>
+          <li>
+            <a href="#contact">
+              Contact
+            </a>
+          </li>
+        </ul>
+      </nav> 
+    </header>
+
+    <div class="disclaimer">
+      <p class="disclaimer-content">
+        Disclaimer: Deze pagina is nog lang niet af. Ik werk er soms aan. Dus
+        mocht je hier terecht komen en denken "Huh! dat klopt niet!"... dat
+        klopt.
+      </p>
+    </div>
+
+    <main>
+
+      <section>
+        <h2>
+          Digitale probleem oplosser.
+        </h2>
         <p>
-          NL Design System maakt de digitale dienstverlening van de overheid toegankelijk, inclusief en gebruiksvriendelijk. Dit gebeurt vanuit een community van designers, developers, toegankelijkheids specialisten, copywriters, etc. ondersteund door een kernteam. Binnen dit kernteam vervul ik de design-rol.
+          Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om mensen te helpen en
+          op te ruimen. Dat doe ik digitaal ook als Senior Product Designer bij
+          Valsplat.
         </p>
         <p>
-          In die hoedanigheid help ik bij het verzamelen, documenteren, doorontwikkelen en uitwisselen van richtlijnen, componenten, en (interactie)patronen. Ik voer de regie op de werking van de community vanuit het design perspectief om zo kennis en kunde te bundelen. Ik onboard en enthousiasmeer designers om via NL Design System te werken. Vervolgens help ze met design system gerelateerde vraagstukken en jaag hergebruik en samenwerking aan.
+          Ik werk graag aan grote, complexe projecten en ben gespecialiseerd in
+          design systemen en toegankelijkheid (CPACC).
         </p>
-      </li>
-      <li>
-        <h3>
-          NS Design System (Nessie)
-        </h3>
+      </section>
+
+      <section id="work">
+        <h2>
+          Werk
+        </h2>
         <p>
-          Bij de Nederlandse Spoorwegen ben ik ingestapt om een multi-platform en toegankelijk design systeem te realiseren. Ik was verantwoordelijk voor het inventariseren, scopen, ontwerpen en documenteren van web/app componenten. Ik stuurde het team van designers aan en schakelde direct met de web en native app developers. Daarnaast hielp ik NS designers te werken via het design system.
+          In de afgelopen jaren heb ik gewerkt aan verschillende opdrachten.
         </p>
-      </li>
-      <li>
-        <h3>
-          NN Design System
-        </h3>
+        <ul>
+          <li>
+            <h3>
+              NL Design System
+            </h3>
+            <p>
+              NL Design System maakt de digitale dienstverlening van de overheid
+              toegankelijk, inclusief en gebruiksvriendelijk. Dit gebeurt vanuit
+              een community van designers, developers, toegankelijkheids
+              specialisten, copywriters, etc. ondersteund door een kernteam.
+              Binnen dit kernteam vervul ik de design-rol.
+            </p>
+            <p>
+              In die hoedanigheid help ik bij het verzamelen, documenteren,
+              doorontwikkelen en uitwisselen van richtlijnen, componenten, en
+              (interactie)patronen. Ik voer de regie op de werking van de
+              community vanuit het design perspectief om zo kennis en kunde te
+              bundelen. Ik onboard en enthousiasmeer designers om via NL Design
+              System te werken. Vervolgens help ze met design system
+              gerelateerde vraagstukken en jaag hergebruik en samenwerking aan.
+            </p>
+          </li>
+          <li>
+            <h3>
+              NS Design System (Nessie)
+            </h3>
+            <p>
+              Bij de Nederlandse Spoorwegen ben ik ingestapt om een
+              multi-platform en toegankelijk design systeem te realiseren. Ik
+              was verantwoordelijk voor het inventariseren, scopen, ontwerpen en
+              documenteren van web/app componenten. Ik stuurde het team van
+              designers aan en schakelde direct met de web en native app
+              developers. Daarnaast hielp ik NS designers te werken via het
+              design system.
+            </p>
+          </li>
+          <li>
+            <h3>
+              NN Design System
+            </h3>
+            <p>
+              Bij Nationale Nederlanden was men verzekerd van mijn inzet om een
+              multi-platform en toegankelijk design systeem te realiseren. Ik
+              was verantwoordelijk voor het inventariseren, scopen, ontwerpen en
+              documenteren van app (en later ook web) componenten. Ik schakelde
+              direct met de de brand manager en de app developer. Daarnaast
+              hielp ik andere designers bij Nationale Nederlanden te werken via
+              het design system.
+            </p>
+          </li>
+          <li>
+            <h3>
+              Randstad Design System
+            </h3>
+            <p>
+              Bij Randstad werkte ik parallel aan twee projecten. Enerzijds was
+              ik UX/UI Designer voor de HR Assistent, een B2E applicatie voor
+              intercedenten. Waar ik als onderdeel van het agile scrum delivery
+              team werkte aan het ophalen van gebruikersfeedback en ontwerpen
+              van nieuwe functionaliteiten. Daarnaast was ik de designer voor
+              Brandshift, het design system voor interne applicaties.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section id="quotes">
+        <h2>
+          Quotes
+        </h2>
         <p>
-          Bij Nationale Nederlanden was men verzekerd van mijn inzet om een multi-platform en toegankelijk design systeem te realiseren. Ik was verantwoordelijk voor het inventariseren, scopen, ontwerpen en documenteren van app (en later ook web) componenten. Ik schakelde direct met de de brand manager en de app developer. Daarnaast hielp ik andere designers bij Nationale Nederlanden te werken via het design system.
+          Feedback op mijn werkzaamheden van mensen met wie ik heb samengewerkt.
         </p>
-      </li>
-      <li>
-        <h3>
-          Randstad Design System
-        </h3>
+
+        <figure>
+          <blockquote>
+            <p>
+              Het was fijn om met Jeffrey samen te werken. Hij weet als geen
+          Quotes
+        </h2>
         <p>
-          Bij Randstad werkte ik parallel aan twee projecten. Enerzijds was ik UX/UI Designer voor de HR Assistent, een B2E applicatie voor intercedenten. Waar ik als onderdeel van het agile scrum delivery team werkte aan het ophalen van gebruikersfeedback en ontwerpen van nieuwe functionaliteiten. Daarnaast was ik de designer voor Brandshift, het design system voor interne applicaties.
+          Feedback op mijn werkzaamheden van mensen met wie ik heb samengewerkt.
         </p>
-      </li>
-    </ul>
-<h2>
-Quotes
-</h2>
-<p>
-Feedback op mijn werkzaamheden van mensen met wie ik heb samengewerkt.
-</p>
 
+        <figure>
+          <blockquote>
+            <p>
+              Het was fijn om met Jeffrey samen te werken. Hij weet als geen
+              ander alle voors en tegens van bepaalde oplossingen naar boven te
+              halen. We hebben echt iets moois neergezet voor NS. Jeffrey is een
+              complete designer die ook nog eens goed kan communiceren en snel
+              contact legt.
+            </p>
+          </blockquote>
+          <figcaption>
+            Tibor den Held, Designer / Web developer NS Design System
+          </figcaption>
+        </figure>
 
-<figure>
-<blockquote>
-<p>
-Het was fijn om met Jeffrey samen te werken. Hij weet als geen ander alle voors en tegens van bepaalde oplossingen naar boven te halen. We hebben echt iets moois neergezet voor NS. Jeffrey is een complete designer die ook nog eens goed kan communiceren en snel contact legt.
-</p>
-</blockquote>
+        <figure>
+          <blockquote>
+            <p>
+              Werken met Jeffrey is inspirerend en plezierig. Hij combineert
+              enthousiasme en een pragmatische aanpak met veel oog voor detail
+              en proces. Jeffrey weet mensen mee te nemen, kritisch te
+              challengen op een prettige manier en tegelijkertijd luchtigheid te
+              brengen in het team. Dankzij zijn bijdrage staat er nu iets waar
+              we trots op zijn en waar anderen graag mee werken.
+            </p>
+          </blockquote>
+          <figcaption>Bas Zweeris, Product Owner NS Design System</figcaption>
+        </figure>
 
-<figcaption>
-Tibor den Held, Designer / Web developer NS Design System
-</figcaption>
-</figure>
+        <figure>
+          <blockquote>
+            <p>
+              Jeffrey was heel snel up-to-speed en bracht meteen veel kennis
+              mee. Hij werkt netjes en gestructureerd, maar is tegelijk heel
+              toegankelijk en gezellig om mee samen te werken. Je merkt dat hij
+              zijn keuzes altijd goed kan onderbouwen, en dat wordt enorm
+              gewaardeerd. Voor mij was het zowel inhoudelijk als persoonlijk
+              een hele fijne samenwerking.
+            </p>
+          </blockquote>
+          <figcaption>Michael Vermeulen, Designer NN Design System</figcaption>
+        </figure>
 
-<figure>
-<blockquote>
-<p>
-Werken met Jeffrey is inspirerend en plezierig. Hij combineert enthousiasme en een pragmatische aanpak met veel oog voor detail en proces. Jeffrey weet mensen mee te nemen, kritisch te challengen op een prettige manier en tegelijkertijd luchtigheid te brengen in het team. Dankzij zijn bijdrage staat er nu iets waar we trots op zijn en waar anderen graag mee werken.
-</p>
-</blockquote>
-<figcaption>
-Bas Zweeris, Product Owner NS Design System
-</figcaption>
-</figure>
+        <figure>
+          <blockquote>
+            <p>
+              Jeffrey is een enthousiaste en supervriendelijke collega die
+              altijd positiviteit brengt. Hij werkt methodisch en nauwgezet,
+              ziet details die anderen missen en stelt de juiste vragen. Daarmee
+              helpt hij niet alleen het eindproduct, maar ook de mensen om hem
+              heen beter te worden. Een plezier om mee samen te werken.
+            </p>
+          </blockquote>
+          <figcaption>
+            Marjon Bakker, Senior adviseur digitale toegankelijkheid bij Firm
+            Ground
+          </figcaption>
+        </figure>
 
-<figure>
-<blockquote>
-<p>
-Jeffrey was heel snel up-to-speed en bracht meteen veel kennis mee. Hij werkt netjes en gestructureerd, maar is tegelijk heel toegankelijk en gezellig om mee samen te werken. Je merkt dat hij zijn keuzes altijd goed kan onderbouwen, en dat wordt enorm gewaardeerd. Voor mij was het zowel inhoudelijk als persoonlijk een hele fijne samenwerking.
-</p>
-</blockquote>
-<figcaption>
-Michael Vermeulen, Designer NN Design System
-</figcaption>
-</figure>
+        <figure>
+          <blockquote>
+            <p>
+              Jeffrey heeft zich onmisbaar gemaakt voor het NL Design System.
+              Hij haalt actief feedback op in de community, organiseert
+              succesvolle samenwerkdagen voor designers en vertaalt onderzoek
+              naar bruikbare patronen. Daarmee helpt hij niet alleen het systeem
+              vooruit, maar ook de hele community die ermee werkt.
+            </p>
+          </blockquote>
+          <figcaption>
+            Hidde de Vries, Toegankelijkheidsspecialist bij NL Design System
+          </figcaption>
+        </figure>
 
-<figure>
-<blockquote>
-<p>
-Jeffrey is een enthousiaste en supervriendelijke collega die altijd positiviteit brengt. Hij werkt methodisch en nauwgezet, ziet details die anderen missen en stelt de juiste vragen. Daarmee helpt hij niet alleen het eindproduct, maar ook de mensen om hem heen beter te worden. Een plezier om mee samen te werken.
-</p>
-</blockquote>
-<figcaption>
-Marjon Bakker, Senior adviseur digitale toegankelijkheid bij Firm Ground
-</figcaption>
-</figure>
+        <figure>
+          <blockquote>
+            <p>
+              Jeff is een van de fijnste collega’s om mee samen te werken. Hij
+              combineert diepgaande kennis van design systems met een
+              gestructureerde en duidelijke manier van werken. Dankzij zijn
+              analytisch vermogen ziet hij snel verbanden en vertaalt onderzoek
+              naar concrete verbeteringen. Daarbij communiceert hij helder,
+              luistert goed en zorgt voor een positieve en prettige werksfeer.
+            </p>
+          </blockquote>
+          <figcaption>Rozerin Ayerdem, Designer NL Design System</figcaption>
+        </figure>
 
-<figure>
-<blockquote>
-<p>
-Jeffrey heeft zich onmisbaar gemaakt voor het NL Design System. Hij haalt actief feedback op in de community, organiseert succesvolle samenwerkdagen voor designers en vertaalt onderzoek naar bruikbare patronen. Daarmee helpt hij niet alleen het systeem vooruit, maar ook de hele community die ermee werkt.
-</p>
-</blockquote>
-<figcaption>
-Hidde de Vries, Toegankelijkheidsspecialist bij NL Design System
-</figcaption>
-</figure>
+        <figure>
+          <blockquote>
+            <p>
+              Jeffrey heeft de designer community actief betrokken bij de
+              ontwikkeling van het NL Design System. Hij brengt veel kennis mee,
+              maar weet tegelijk anderen te faciliteren en vertrouwen te geven.
+              Dat maakt samenwerken met hem niet alleen leuk, maar ook
+              ontzettend waardevol voor het succes van het design system.
+            </p>
+          </blockquote>
+          <figcaption>
+            Yolijn van der Kolk, Productmanager NL Design System
+          </figcaption>
+        </figure>
 
-<figure>
-<blockquote>
-<p>
-Jeff is een van de fijnste collega’s om mee samen te werken. Hij combineert diepgaande kennis van design systems met een gestructureerde en duidelijke manier van werken. Dankzij zijn analytisch vermogen ziet hij snel verbanden en vertaalt onderzoek naar concrete verbeteringen. Daarbij communiceert hij helder, luistert goed en zorgt voor een positieve en prettige werksfeer.
-</p>
-</blockquote>
-<figcaption>
-Rozerin Ayerdem, Designer NL Design System 
-</figcaption>
-</figure>
+      </section>
 
-<figure>
-<blockquote>
-<p>
-Jeffrey heeft de designer community actief betrokken bij de ontwikkeling van het NL Design System. Hij brengt veel kennis mee, maar weet tegelijk anderen te faciliteren en vertrouwen te geven. Dat maakt samenwerken met hem niet alleen leuk, maar ook ontzettend waardevol voor het succes van het design system.
-</p>
-</blockquote>
-<figcaption>
-Yolijn van der Kolk, Productmanager NL Design System 
-</figcaption>
-</figure>
+      <section>
+        <h2>
+          Over mij
+        </h2>
+        <p>
+          ...
+        </p>
+      </section>
 
-<figure>
-<blockquote>
-<p>
-
-</p>
-</blockquote>
-<figcaption>
-
-</figcaption>
-</figure>
-
-
-
-
+            <section>
+        <h2>
+          Contact
+        </h2>
+        <p>
+          ...
+        </p>
+      </section>
+      
+    </main>
   </body>
 </html>
-
-
