--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           Over mij
         </h2>
         <p>
-          ...
+          Ik woon in Purmerend met mijn vrouw en twee zoons. Ik werk graag vanuit huis maar vind het ook leuk om samen te werken op lokatie. Na een werkdag ga ik graag sporten en op zondag voetbal ik in het Amsterdamse Bos. Daarnaast ben ik supporter van de grootste voetbalclub van Nederland.
         </p>
       </section>
 
@@ -263,7 +263,7 @@
           Contact
         </h2>
         <p>
-          ...
+          Wil je met mij samenwerken? Neem contact op met Valsplat.
         </p>
       </section>
       
