--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>
           Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om mensen te helpen en
           op te ruimen. Dat doe ik digitaal ook als Senior Product Designer bij
-          Valsplat.
+          <a href="https://www.valsplat.nl">Valsplat</a>.
         </p>
         <p>
           Ik werk graag aan grote, complexe projecten en ben gespecialiseerd in
@@ -263,7 +263,7 @@
           Contact
         </h2>
         <p>
-          Wil je met mij samenwerken? Neem contact op met Valsplat.
+          Wil je met mij samenwerken? Neem contact op met <a href="https://www.valsplat.nl">Valsplat</a>.
         </p>
       </section>
       
