--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>
           Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om mensen te helpen en
           op te ruimen. Dat doe ik digitaal ook als Senior Product Designer bij
-          <a href="https://www.valsplat.nl">Valsplat</a>.
+          <a href="www.valsplat.nl">Valsplat</a>.
         </p>
         <p>
           Ik werk graag aan grote, complexe projecten en ben gespecialiseerd in
@@ -249,7 +249,7 @@
 
       </section>
 
-      <section>
+      <section id="about">
         <h2>
           Over mij
         </h2>
@@ -258,12 +258,12 @@
         </p>
       </section>
 
-            <section>
+            <section id="contact">
         <h2>
           Contact
         </h2>
         <p>
-          Wil je met mij samenwerken? Neem contact op met <a href="https://www.valsplat.nl">Valsplat</a>.
+          Wil je met mij samenwerken? Neem contact op met <a href="www.valsplat.nl">Valsplat</a>.
         </p>
       </section>
       
