logo's puur decoratief

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <ul>
           <li>
             <div class="work__logo">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" aria-hidden="true" role="presentation">
   <path fill="currentColor" fill-rule="evenodd" clip-rule="evenodd" d="M.599 0H47.4A.6.6 0 0 1 48 .599v23.4a23.83 23.83 0 0 1-1.89 9.345 23.908 23.908 0 0 1-5.139 7.627 23.957 23.957 0 0 1-7.625 5.141A23.857 23.857 0 0 1 23.999 48a23.935 23.935 0 0 1-16.97-7.029 23.926 23.926 0 0 1-5.14-7.627A23.869 23.869 0 0 1 0 24V.599A.6.6 0 0 1 .599 0Zm20.925 3.157-.002.001c-3.08.031-4.6 3.686-2.426 5.827l4.595 4.52.016.016.017.015a.425.425 0 0 0 .28.103.423.423 0 0 0 .315-.135l4.594-4.52c2.176-2.14.653-5.795-2.425-5.827-.974-.01-1.85.37-2.485.986a3.49 3.49 0 0 0-2.48-.986ZM7.784 24c0 8.792 7.258 15.92 16.214 15.92S40.214 32.792 40.214 24h-.001v-9.896a.594.594 0 0 0-.6-.588h-6.038c-4.733 0-8.665 3.372-9.44 7.803a.136.136 0 0 1-.148.113.14.14 0 0 1-.128-.113c-.775-4.43-4.707-7.803-9.439-7.803H8.38a.593.593 0 0 0-.597.588V24Z"/>
 </svg>
         </div>
@@ -99,7 +99,7 @@
           </li>
           <li>
             <div class="work__logo">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 31">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 31" aria-hidden="true" role="presentation">
   <path fill="currentColor" d="M35.071 14.88a8.75 8.75 0 0 0-6.133-2.48H11.953l6.29-6.2H34.13a2.542 2.542 0 0 1 1.725.775l9.279 9.145a8.75 8.75 0 0 0 6.133 2.48h16.99l-6.295 6.2H46.08a2.542 2.542 0 0 1-1.725-.775L35.07 14.88Zm4.876 13.485A9.624 9.624 0 0 0 46.08 31h18.4l15.729-15.5L64.482 0h-8.808l12.582 12.4H51.27a3.335 3.335 0 0 1-1.726-.62l-9.283-9.145A9.624 9.624 0 0 0 34.129 0H15.727L0 15.5 15.727 31h8.808L11.953 18.6h16.985a3.333 3.333 0 0 1 1.726.62l9.283 9.145Z"/>
 </svg>
             </div>
@@ -118,7 +118,7 @@
           </li>
           <li>
             <div class="work__logo">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 47 48">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 47 48" aria-hidden="true" role="presentation">
   <path fill="currentColor" d="M22.995 0c1.432 0 2.78.084 4.127.338C33.895 1.484 39.64 5.565 43.208 11.12l.339.542.398.689C45.88 15.825 46.921 19.8 47 24c0 9.296-5.307 17.408-13.056 21.38C30.66 47.07 26.953 48 22.994 48 9.265 48 0 36.675 0 27.549c0-8.958 6.15-11.915 12.635-11.915h20.383L29.9 31.268l-7.918-11.916c-.252-.337-.757-.591-1.178-.591v-.085h-6.318a.988.988 0 0 0-.927.76l-.251.93-3.202 15.972c-.084.422.17.76.59.76h4.717c.421 0 .842-.337.842-.675l1.853-9.043.59-2.788 7.833 11.915c.253.338.759.592 1.18.592h6.401a.987.987 0 0 0 .926-.761l1.348-6.423 2.443-11.746c.084-.422 0-1.014-.253-1.352l-3.959-6.17c-.253-.337-.758-.59-1.178-.59H4.717c-1.095 0-.926-.423-.084-1.522C9.013 3.295 15.583 0 22.995 0Z"/>
 </svg>
             </div>
@@ -137,7 +137,7 @@
           </li>
           <li>
             <div class="work__logo">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 38">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 38" aria-hidden="true" role="presentation">
   <path fill="currentColor" d="M29.523 38h8.422V16.765a4.198 4.198 0 0 0-1.24-3.004L24.211 1.243A4.165 4.165 0 0 0 21.212 0H0v8.457h23.193c1.679 0 3.289.668 4.476 1.858a6.349 6.349 0 0 1 1.854 4.485V38ZM50.495 38h-8.44V16.765a4.198 4.198 0 0 1 1.24-3.004L55.789 1.243A4.165 4.165 0 0 1 58.788 0H80v8.457H56.807c-1.679 0-3.29.668-4.476 1.858a6.349 6.349 0 0 0-1.854 4.485l.018 23.2Z"/>
 </svg>
             </div>
