--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               contact legt.
             </p>
           </blockquote>
-          <figcaption>
+          <figcaption class="quote__author">
             Tibor den Held, Designer / Web developer NS Design System
           </figcaption>
         </figure>
@@ -190,7 +190,7 @@
               we trots op zijn en waar anderen graag mee werken.
             </p>
           </blockquote>
-          <figcaption>Bas Zweeris, Product Owner NS Design System</figcaption>
+          <figcaption class="quote__author">Bas Zweeris, Product Owner NS Design System</figcaption>
         </figure>
 
         <figure>
@@ -204,7 +204,7 @@
               een hele fijne samenwerking.
             </p>
           </blockquote>
-          <figcaption>Michael Vermeulen, Designer NN Design System</figcaption>
+          <figcaption class="quote__author">Michael Vermeulen, Designer NN Design System</figcaption>
         </figure>
 
         <figure>
@@ -217,7 +217,7 @@
               heen beter te worden. Een plezier om mee samen te werken.
             </p>
           </blockquote>
-          <figcaption>
+          <figcaption class="quote__author">
             Marjon Bakker, Senior adviseur digitale toegankelijkheid bij Firm
             Ground
           </figcaption>
@@ -233,7 +233,7 @@
               vooruit, maar ook de hele community die ermee werkt.
             </p>
           </blockquote>
-          <figcaption>
+          <figcaption class="quote__author">
             Hidde de Vries, Toegankelijkheidsspecialist bij NL Design System
           </figcaption>
         </figure>
@@ -248,7 +248,7 @@
               naar concrete verbeteringen. Daarbij communiceert hij helder,
               luistert goed en zorgt voor een positieve en prettige werksfeer.
             </p>
-          </blockquote>
+          </blockquote class="quote__author">
           <figcaption>Rozerin Ayerdem, Designer NL Design System</figcaption>
         </figure>
 
@@ -262,7 +262,7 @@
               ontzettend waardevol voor het succes van het design system.
             </p>
           </blockquote>
-          <figcaption>
+          <figcaption class="quote__author">
             Yolijn van der Kolk, Productmanager NL Design System
           </figcaption>
         </figure>
