--- a/index.html
+++ b/index.html
@@ -248,8 +248,10 @@
               naar concrete verbeteringen. Daarbij communiceert hij helder,
               luistert goed en zorgt voor een positieve en prettige werksfeer.
             </p>
-          </blockquote class="quote__author">
-          <figcaption>Rozerin Ayerdem, Designer NL Design System</figcaption>
+          </blockquote>
+          <figcaption class="quote__author">
+Rozerin Ayerdem, Designer NL Design System
+          </figcaption>
         </figure>
 
         <figure>
