--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </figure>
 
         <figure>
-          <blockquote>
+          <blockquote class="quote">
             <p>
               Werken met Jeffrey is inspirerend en plezierig. Hij combineert
               enthousiasme en een pragmatische aanpak met veel oog voor detail
@@ -194,7 +194,7 @@
         </figure>
 
         <figure>
-          <blockquote>
+          <blockquote class="quote">
             <p>
               Jeffrey was heel snel up-to-speed en bracht meteen veel kennis
               mee. Hij werkt netjes en gestructureerd, maar is tegelijk heel
@@ -208,7 +208,7 @@
         </figure>
 
         <figure>
-          <blockquote>
+          <blockquote class="quote">
             <p>
               Jeffrey is een enthousiaste en supervriendelijke collega die
               altijd positiviteit brengt. Hij werkt methodisch en nauwgezet,
@@ -224,7 +224,7 @@
         </figure>
 
         <figure>
-          <blockquote>
+          <blockquote class="quote">
             <p>
               Jeffrey heeft zich onmisbaar gemaakt voor het NL Design System.
               Hij haalt actief feedback op in de community, organiseert
@@ -239,7 +239,7 @@
         </figure>
 
         <figure>
-          <blockquote>
+          <blockquote class="quote">
             <p>
               Jeff is een van de fijnste collega’s om mee samen te werken. Hij
               combineert diepgaande kennis van design systems met een
@@ -255,7 +255,7 @@ Rozerin Ayerdem, Designer NL Design System
         </figure>
 
         <figure>
-          <blockquote>
+          <blockquote class="quote">
             <p>
               Jeffrey heeft de designer community actief betrokken bij de
               ontwikkeling van het NL Design System. Hij brengt veel kennis mee,
