--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </p>
 
         <figure>
-          <blockquote>
+          <blockquote class="quote">
             <p>
               Het was fijn om met Jeffrey samen te werken. Hij weet als geen
               ander alle voors en tegens van bepaalde oplossingen naar boven te
