--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         <h2 class="heading-display">
           Digitale probleem oplosser.
         </h2>
-        <p>
+        <p class="paragraph-lead">
           Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om mensen te helpen en
           op te ruimen. Dat doe ik digitaal ook als Senior Product Designer bij
           <a href="https://valsplat.nl/">Valsplat</a>.
         </p>
-        <p>
+        <p class="paragraph-lead">
           Ik werk graag aan grote, complexe projecten en ben gespecialiseerd in
           design systemen en toegankelijkheid (CPACC).
         </p>
