Add paragraph class for improved styling
Updated paragraph elements to include a class for styling.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <div class="disclaimer">
-      <p class="disclaimer-content">
+      <p class="paragraph disclaimer-content">
         Disclaimer: Deze pagina is nog lang niet af. Ik werk er soms aan. Dus
         mocht je hier terecht komen en denken "Huh! dat klopt niet!"... dat
         klopt.
@@ -67,7 +67,7 @@
         <h2 class="heading-2">
           Werk
         </h2>
-        <p>
+        <p class="paragraph">
           In de afgelopen jaren heb ik gewerkt aan verschillende opdrachten.
         </p>
         <ul>
@@ -80,14 +80,14 @@
             <h3 class="heading-3">
               NL Design System
             </h3>
-            <p>
+            <p class="paragraph">
               NL Design System maakt de digitale dienstverlening van de overheid
               toegankelijk, inclusief en gebruiksvriendelijk. Dit gebeurt vanuit
               een community van designers, developers, toegankelijkheids
               specialisten, copywriters, etc. ondersteund door een kernteam.
               Binnen dit kernteam vervul ik de design-rol.
             </p>
-            <p>
+            <p class="paragraph">
               In die hoedanigheid help ik bij het verzamelen, documenteren,
               doorontwikkelen en uitwisselen van richtlijnen, componenten, en
               (interactie)patronen. Ik voer de regie op de werking van de
@@ -106,7 +106,7 @@
             <h3 class="heading-3">
               NS Design System (Nessie)
             </h3>
-            <p>
+            <p class="paragraph">
               Bij de Nederlandse Spoorwegen ben ik ingestapt om een
               multi-platform en toegankelijk design systeem te realiseren. Ik
               was verantwoordelijk voor het inventariseren, scopen, ontwerpen en
@@ -125,7 +125,7 @@
             <h3 class="heading-3">
               NN Design System
             </h3>
-            <p>
+            <p class="paragraph">
               Bij Nationale Nederlanden was men verzekerd van mijn inzet om een
               multi-platform en toegankelijk design systeem te realiseren. Ik
               was verantwoordelijk voor het inventariseren, scopen, ontwerpen en
@@ -144,7 +144,7 @@
             <h3 class="heading-3">
               Randstad Design System
             </h3>
-            <p>
+            <p class="paragraph">
               Bij Randstad werkte ik parallel aan twee projecten. Enerzijds was
               ik UX/UI Designer voor de HR Assistent, een B2E applicatie voor
               intercedenten. Waar ik als onderdeel van het agile scrum delivery
@@ -166,7 +166,7 @@
             <h3 class="heading-3">
               KPN - Wifi tuner
             </h3>
-            <p>
+            <p class="paragraph">
               Bij KPN werkte ik voor een langere periode aan verschillende projecten. Dat deed ik voor het Service team. Het hoogtepunt van mijn periode daar wat het ontwikkelen van de Wifi tuner. Hiervoor zijn we gestart met twee Design Sprints. Vervolgens heb ik een uitgebreide, of eigenlijk gigantische, flowchart en een prototype opgeleverd. We zijn bij KPN klanten thuis in gesprek gegaan terwijl ze met het prototype aan de slag gingen. Op die manier haalde we waardevolle inzichten op.
             </p>
           </li>
@@ -177,13 +177,13 @@
         <h2 class="heading-2">
           Quotes
         </h2>
-        <p>
+        <p class="paragraph">
           Feedback op mijn werkzaamheden van mensen met wie ik heb samengewerkt.
         </p>
 
         <figure>
           <blockquote class="quote">
-            <p>
+            <p class="paragraph">
               Het was fijn om met Jeffrey samen te werken. Hij weet als geen
               ander alle voors en tegens van bepaalde oplossingen naar boven te
               halen. We hebben echt iets moois neergezet voor NS. Jeffrey is een
@@ -198,7 +198,7 @@
 
         <figure>
           <blockquote class="quote">
-            <p>
+            <p class="paragraph">
               Werken met Jeffrey is inspirerend en plezierig. Hij combineert
               enthousiasme en een pragmatische aanpak met veel oog voor detail
               en proces. Jeffrey weet mensen mee te nemen, kritisch te
@@ -212,7 +212,7 @@
 
         <figure>
           <blockquote class="quote">
-            <p>
+            <p class="paragraph">
               Jeffrey was heel snel up-to-speed en bracht meteen veel kennis
               mee. Hij werkt netjes en gestructureerd, maar is tegelijk heel
               toegankelijk en gezellig om mee samen te werken. Je merkt dat hij
@@ -226,7 +226,7 @@
 
         <figure>
           <blockquote class="quote">
-            <p>
+            <p class="paragraph">
               Jeffrey is een enthousiaste en supervriendelijke collega die
               altijd positiviteit brengt. Hij werkt methodisch en nauwgezet,
               ziet details die anderen missen en stelt de juiste vragen. Daarmee
@@ -242,7 +242,7 @@
 
         <figure>
           <blockquote class="quote">
-            <p>
+            <p class="paragraph">
               Jeffrey heeft zich onmisbaar gemaakt voor het NL Design System.
               Hij haalt actief feedback op in de community, organiseert
               succesvolle samenwerkdagen voor designers en vertaalt onderzoek
@@ -257,7 +257,7 @@
 
         <figure>
           <blockquote class="quote">
-            <p>
+            <p class="paragraph">
               Jeff is een van de fijnste collega’s om mee samen te werken. Hij
               combineert diepgaande kennis van design systems met een
               gestructureerde en duidelijke manier van werken. Dankzij zijn
@@ -273,7 +273,7 @@ Rozerin Ayerdem, Designer NL Design System
 
         <figure>
           <blockquote class="quote">
-            <p>
+            <p class="paragraph">
               Jeffrey heeft de designer community actief betrokken bij de
               ontwikkeling van het NL Design System. Hij brengt veel kennis mee,
               maar weet tegelijk anderen te faciliteren en vertrouwen te geven.
@@ -292,7 +292,7 @@ Rozerin Ayerdem, Designer NL Design System
         <h2 class="heading-2">
           Over mij
         </h2>
-        <p>
+        <p class="paragraph">
           Ik woon in Purmerend met mijn vrouw en twee zoons. Ik werk graag vanuit huis maar vind het ook leuk om samen te werken op lokatie. Na een werkdag ga ik graag sporten en op zondag voetbal ik in het Amsterdamse Bos. Daarnaast ben ik supporter van de grootste voetbalclub van Nederland.
         </p>
       </section>
@@ -301,7 +301,7 @@ Rozerin Ayerdem, Designer NL Design System
         <h2 class="heading-2">
           Contact
         </h2>
-        <p>
+        <p class="paragraph">
           Wil je met mij samenwerken? Neem contact op met <a href="https://valsplat.nl/">Valsplat</a>.
         </p>
       </section>
