Refactor header and navigation structure in index.html

--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
   </head>
 
   <body>
-    <header>
-      <h1 class="heading-3">
+    <header class="page-header">
+      <h1 class="logo">
         Jeffrey Lauwers
       </h1>  
-      <nav>
-        <ul>
-          <li>
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-list-item">
             <a href="#work">
               Werk
             </a>
           </li>
-          <li>
+          <li class="navigation-list-item">
             <a href="#quotes">
               Quotes
             </a>
           </li>
-          <li>
+          <li class="navigation-list-item">
             <a href="#about">
               Over mij
             </a>
           </li>
-          <li>
+          <li class="navigation-list-item">
             <a href="#contact">
               Contact
             </a>
