Fix formatting of author names in quotes

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-            Tibor den Held, Designer / Web developer NS Design System
+            Tibor den Held, Designer, Web developer NS Design System
           </figcaption>
         </figure>
 
@@ -207,7 +207,9 @@
               we trots op zijn en waar anderen graag mee werken.
             </p>
           </blockquote>
-          <figcaption class="quote__author">Bas Zweeris, Product Owner NS Design System</figcaption>
+          <figcaption class="quote__author">
+            Bas Zweeris, Product Owner NS Design System
+          </figcaption>
         </figure>
 
         <figure>
@@ -221,7 +223,9 @@
               een hele fijne samenwerking.
             </p>
           </blockquote>
-          <figcaption class="quote__author">Michael Vermeulen, Designer NN Design System</figcaption>
+          <figcaption class="quote__author">
+            Michael Vermeulen, Designer NN Design System
+          </figcaption>
         </figure>
 
         <figure>
@@ -267,7 +271,7 @@
             </p>
           </blockquote>
           <figcaption class="quote__author">
-Rozerin Ayerdem, Designer NL Design System
+            Rozerin Ayerdem, Designer NL Design System
           </figcaption>
         </figure>
 
