--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
           Digitale probleem oplosser.
         </h2>
         <p class="paragraph-lead">
-          Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om mensen te helpen en
-          op te ruimen. Dat doe ik digitaal ook als Senior Product Designer bij
+          Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om op te ruimen en mensen te helpen. Dat doe ik digitaal ook als Senior Product Designer bij
           <a href="https://valsplat.nl/">Valsplat</a>.
         </p>
         <p class="paragraph-lead">
