--- a/index.html
+++ b/index.html
@@ -169,6 +169,14 @@
               Bij KPN werkte ik voor een langere periode aan verschillende projecten. Dat deed ik voor het Service team. Het hoogtepunt van mijn periode daar wat het ontwikkelen van de Wifi tuner. Hiervoor zijn we gestart met twee Design Sprints. Vervolgens heb ik een uitgebreide, of eigenlijk gigantische, flowchart en een prototype opgeleverd. We zijn bij KPN klanten thuis in gesprek gegaan terwijl ze met het prototype aan de slag gingen. Op die manier haalde we waardevolle inzichten op.
             </p>
           </li>
+<li class="work__item">
+            <h3 class="heading-3">
+              En verder?
+            </h3>
+            <p class="paragraph">
+              Verder heb ik ook gewerkt aan redesigns voor Marktplaats, de Vakantie Discounter,het Financieel Dagblad, BNR, AirFrance KLM Cargo en de HBO Kennisbank.
+            </p>
+          </li>
         </ul>
       </section>
 
