--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           Over mij
         </h2>
         <p class="paragraph">
-          Ik woon in Purmerend met mijn vrouw en twee zoons. Ik werk graag vanuit huis maar vind het ook leuk om samen te werken op lokatie. Na een werkdag ga ik graag sporten en op zondag voetbal ik in het Amsterdamse Bos. Daarnaast ben ik supporter van de grootste voetbalclub van Nederland.
+          Ik woon in Purmerend met mijn vrouw en twee zoons. Ik werk graag vanuit huis, maar vind het ook leuk om samen te werken op locatie. Na een werkdag ga ik graag sporten, en op zondag voetbal ik in het Amsterdamse Bos. Daarnaast ben ik supporter van de grootste voetbalclub van Nederland.
         </p>
       </section>
 
