--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Jeffrey Lauwers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&display=swap');
+</style>
   </head>
 
   <body>
