--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="disclaimer">
       <p class="paragraph disclaimer-content">
         Disclaimer: Deze pagina is nog lang niet af. Ik werk er soms aan. Dus
-        mocht je hier terecht komen en denken "Huh! dat klopt niet!"... dat
+        mocht je hier terecht komen en denken "Huh! Dat klopt niet!"... dat
         klopt.
       </p>
     </div>
