--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <section>
         <h2 class="heading-display">
-          Digitale probleem oplosser.
+          Digitale probleem-oplosser.
         </h2>
         <p class="paragraph-lead">
           Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om op te ruimen en mensen te helpen. Dat doe ik digitaal ook als Senior Product Designer bij
@@ -132,7 +132,7 @@
               multi-platform en toegankelijk design systeem te realiseren. Ik
               was verantwoordelijk voor het inventariseren, scopen, ontwerpen en
               documenteren van app (en later ook web) componenten. Ik schakelde
-              direct met de de brand manager en de app developer. Daarnaast
+              direct met de brand manager en de app developer. Daarnaast
               hielp ik andere designers bij Nationale Nederlanden te werken via
               het design system.
             </p>
@@ -169,7 +169,7 @@
               KPN - Wifi tuner
             </h3>
             <p class="paragraph">
-              Bij KPN werkte ik voor een langere periode aan verschillende projecten. Dat deed ik voor het Service team. Het hoogtepunt van mijn periode daar wat het ontwikkelen van de Wifi tuner. Hiervoor zijn we gestart met twee Design Sprints. Vervolgens heb ik een uitgebreide, of eigenlijk gigantische, flowchart en een prototype opgeleverd. We zijn bij KPN klanten thuis in gesprek gegaan terwijl ze met het prototype aan de slag gingen. Op die manier haalde we waardevolle inzichten op.
+              Bij KPN werkte ik voor een langere periode aan verschillende projecten. Dat deed ik voor het Service team. Het hoogtepunt van mijn periode daar was het ontwikkelen van de Wifi tuner. Hiervoor zijn we gestart met twee Design Sprints. Vervolgens heb ik een uitgebreide, of eigenlijk gigantische, flowchart en een prototype opgeleverd. We zijn bij KPN klanten thuis in gesprek gegaan terwijl ze met het prototype aan de slag gingen. Op die manier haalde we waardevolle inzichten op.
             </p>
           </li>
 <li class="work__item">
