--- a/index.html
+++ b/index.html
@@ -320,6 +320,8 @@
           Wil je met mij samenwerken? Neem contact op met <a href="https://valsplat.nl/">Valsplat</a>.
         </p>
       </section>
+
+      <button onclick="randomizeColors()">Nieuwe kleuren</button>
       
     </main>
   </body>
