--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <figure>
           <blockquote class="quote">
             <p class="paragraph">
-              Jeff is een van de fijnste collega’s om mee samen te werken. Hij
+              Jeff is een van de fijnste collega&rsquo;s om mee samen te werken. Hij
               combineert diepgaande kennis van design systems met een
               gestructureerde en duidelijke manier van werken. Dankzij zijn
               analytisch vermogen ziet hij snel verbanden en vertaalt onderzoek
@@ -312,7 +312,7 @@
         </p>
       </section>
 
-            <section id="contact">
+      <section id="contact">
         <h2 class="heading-2">
           Contact
         </h2>
@@ -320,8 +320,6 @@
           Wil je met mij samenwerken? Neem contact op met <a href="https://valsplat.nl/">Valsplat</a>.
         </p>
       </section>
-
-      <button onclick="randomizeColors()">Nieuwe kleuren</button>
       
     </main>
   </body>
