--- a/index.html
+++ b/index.html
@@ -355,6 +355,11 @@
           Wil je met mij samenwerken? Neem contact op met
           <a href="https://valsplat.nl/">Valsplat</a>.
         </p>
+        <img
+          src="profile-light.png"
+          alt="Profiel-foto van Jeffrey. Hij heeft donkerbruin haar, blauwe ogen een donkergroen shirt aan en een vriendelijke glimlach."
+          class="profile-picture"
+          />
       </section>
     </main>
   </body>
