Revise heading and enhance introductory text
Updated the heading and improved the text for clarity and inclusivity.

--- a/index.html
+++ b/index.html
@@ -43,16 +43,15 @@
 
     <main class="full-width">
       <section>
-        <h2 class="heading-display">Digitale probleem-oplosser.</h2>
+        <h2 class="heading-display">Pragmatische probleem-oplosser.</h2>
         <p class="paragraph-lead">
-          Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om op te ruimen en
-          mensen te helpen. Dat doe ik digitaal ook als Senior Product Designer
-          bij
-          <a href="https://valsplat.nl/">Valsplat</a>.
+          Hoi! Mijn naam is Jeffrey Lauwers. Ik hou ervan om op te ruimen en mensen te helpen. Dat doe ik digitaal ook als Senior Product Designer bij <a href="https://valsplat.nl/">Valsplat</a>.
         </p>
         <p class="paragraph-lead">
-          Ik werk graag aan grote, complexe projecten en ben gespecialiseerd in
-          design systemen en toegankelijkheid (CPACC).
+          Ik werk graag aan grote, complexe projecten en ben gespecialiseerd in design systems en digitale toegankelijkheid (CPACC).
+        </p>
+        <p class="paragraph-lead">
+          Ik help organisaties structuur aan te brengen in hun ontwerpproces en ontwikkel gebruiksvriendelijke, inclusieve patronen die voor zoveel mogelijk eindgebruikers werken. Van power-users tot mensen met een beperking of lage digitale vaardigheid.
         </p>
       </section>
 
